@@ -126,6 +126,14 @@ buildstream 1.3.1
     Providing a remote will limit build's pull/push remote actions to the given
     remote specifically, ignoring those defined via user or project configuration.
 
+  o Artifacts can now be cached explicitly with an empty `build tree` when built.
+    Element types without a build-root were already cached with an empty build tree
+    directory, this can now be extended to all or successful artifacts to save on cache
+    overheads. The cli main option '--cache-buildtrees' or the user configuration cache
+    group option 'cache-buildtrees' can be set as 'always', 'failure' or 'never', with
+    the default being always. Note, as the cache-key for the artifact is independant of
+    the cached build tree input it will remain unaltered, however the availbility of the
+    build tree content may differ.
 
 =================
 buildstream 1.1.5
